--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "file-upload": "^0.0.0",
     "hbs": "^4.2.0",
